# mc-pilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.trellis/spec/backend/: agent-harness-contracts.md  database-guidelines.md  directory-structure.md  error-handling.md  foundation-contracts.md  game-runtime-contracts.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/07-04-docker-runtime-e2e-fix/: prd.md  task.json
.trellis/tasks/07-04-final-acceptance-fixes/: task.json
data/: mc_pilot.db
docs/: data-stats.txt  instruction.md  pytest-output.txt  实验报告-v2.md  实验报告-v3.md  实验报告.md
fabric-mod/: .gitignore  BUILDING.md  README.md  build.gradle  gradle.properties  settings.gradle
scripts/: build_recipes.py  build_wiki.py  docker_init.py  test_connectivity.py
src/mc_pilot/: __init__.py  app.py  config.py  errors.py  logging_config.py
tests/: conftest.py  test_agent.py  test_agent_evaluations.py  test_app.py  test_chat_limits.py  test_config.py  test_features.py  test_game.py  test_rag.py  test_recipes.py  test_verification.py
tests/fixtures/: agent_eval_cases.json  sample_recipes.json
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue  liquid-glass-browser.css  liquid-glass.css  main.ts  mobile.css  router.ts  styles.css  texture.css  theme.css
(+113 files in other folders)
