[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-pilot"
version = "0.1.0"
description = "A local Minecraft Java 26.2 pilot agent."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "jinja2==3.1.6",
  "pydantic-settings==2.10.1",
  "qdrant-client==1.15.1",
  "sentence-transformers>=3.0,<4",
  "sqlalchemy==2.0.43",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mc_pilot = ["templates/*.html", "static/css/*.css", "static/js/*.js"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".agents", ".codex", ".trellis", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
exclude = "(^|/)(\\.agents|\\.codex|\\.trellis|\\.venv)/"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "qdrant_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true
